# ndsquared-pyapi

./: README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: cq_check.yaml  publish.yaml  release.yaml  release_and_publish.yaml
app/: main.py
deploy/kustomization/: deployment.yaml  kustomization.yaml  service.yaml  worker.yaml
