[tool.poetry]
name = "pyapi"
version = "1.2.0"
description = ""
authors = ["Daniel Longeuay <dannylongeuay@yahoo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
dramatiq = {extras = ["redis", "watch"], version = "^1.12.1"}
fastapi-auth0 = "^0.3.0"
requests = "^2.27.1"

# [tool.pyright]
# typeCheckingMode = "strict"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
